package com.company;

public class Main {

    public static void main(String[] args)
    {
        System.out.println("Damn boy, you gay");

        System.out.println("123");

        System.out.println("1234");
    }
}
