@startuml
'https://plantuml.com/class-diagram

abstract class Turnering
class Main
class Hold
class KnockoutTurnering
class PointTurnering
class Kamp
class DBConnector
class Fillæser
class UI

Main o-- UI
UI o-- Turnering
Turnering <|-- KnockoutTurnering
Turnering<|-- PointTurnering
Turnering o-- "16" Hold
Turnering o-- Kamp
Kamp o-- "2" Hold
UI o-- DBConnector
UI o-- Fillæser
@enduml